# EnglishTranslation

13-20180319-simaud/: .gitignore  Makefile  Makefile.am  README  configure.ac
13-20180319-simaud/src/: .gitignore  Makefile  Makefile.am  simaud.c  simaudauthserver.h  simaudmqconsumer.c  simaudnetlink.c  simaudnetlink.h
13-20180319-simaud/src/AuthServer/: .gitignore  Makefile  Makefile.am  rule  rule-back  rule-test  simaud.c  simaudauthif.c  simaudauthif.h  simaudauthority.c  simaudauthority.h  simaudauthserver.c  simaudkernelif.c  simaudkernelif.h  simaudrequest.c  simaudrequest.h  simaudrulefile.c  simaudrulefile.h  simaudruleinterpret.c  simaudruleinterpret.h  simauduserif.c  simauduserif.h
13-20180319-simaud/src/MqClient/: .gitignore  Makefile  Makefile.am  MqClient.c  libmqclient.la  messagequeue.c  messagequeue.h  messagequeue.lo  mqclient  mqcommand.c  mqcommand.h  mqcommand.lo  mqutils.c  mqutils.h  mqutils.lo  simaud.c  simaudmqconsumer.h  simaudmqutils.c
13-20180319-simaud/src/MqClient/.deps/: MqClient.Po  messagequeue.Plo  mqcommand.Plo  mqutils.Plo
13-20180319-simaud/src/MqClient/.libs/: libmqclient.la
13-20180319-simaud/src/RuleFormatter/: .gitignore  Makefile.am  formatter.c  formatter.h  formatterd.c
